[project]
name = "torch-learn"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Rybalka",email = "polterageist@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"

[project.scripts]
torch_learn = "torch_learn.main:cli"
